dataset1235/2025-2/1153765216/users/1370515670/executions/2814675586_1319609354.log
== RUN (2025-08-26 18:37:28)
-- CODE: 
n1 = float(input(10.0))
n2 = float(input(9.0))

media = int(n1 + n2 / 2)
print(media)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4.2
5.8
---- correct output:
5.0
---- user output:
10.09.07
-- TEST CASE 2:
---- input:
10.0
9.0
---- correct output:
9.5
---- user output:
10.09.014
-- TEST CASE 3:
---- input:
10.0
8.8
---- correct output:
9.4
---- user output:
10.09.014
-- TEST CASE 4:
---- input:
7.5
7.5
---- correct output:
7.5
---- user output:
10.09.011
-- TEST CASE 5:
---- input:
7.8
8.4
---- correct output:
8.1
---- user output:
10.09.012
-- TEST CASE 6:
---- input:
4.8
5.2
---- correct output:
5.0
---- user output:
10.09.07
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 18:38:13)
-- CODE: 
n1 = float(input(10.0))
n2 = float(input(9.0))

media = (n1 + n2 )/ 2
print(media)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
4.2
5.8
---- correct output:
5.0
---- user output:
10.09.05.0
-- TEST CASE 2:
---- input:
10.0
9.0
---- correct output:
9.5
---- user output:
10.09.09.5
-- TEST CASE 3:
---- input:
10.0
8.8
---- correct output:
9.4
---- user output:
10.09.09.4
-- TEST CASE 4:
---- input:
7.5
7.5
---- correct output:
7.5
---- user output:
10.09.07.5
-- TEST CASE 5:
---- input:
7.8
8.4
---- correct output:
8.1
---- user output:
10.09.08.1
-- TEST CASE 6:
---- input:
4.8
5.2
---- correct output:
5.0
---- user output:
10.09.05.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 18:38:03)
-- CODE: 
n1 = float(input(10.0))
n2 = float(input(9.0))

media = int(n1 + n2 )/ 2
print(media)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4.2
5.8
---- correct output:
5.0
---- user output:
10.09.05.0
-- TEST CASE 2:
---- input:
10.0
9.0
---- correct output:
9.5
---- user output:
10.09.09.5
-- TEST CASE 3:
---- input:
10.0
8.8
---- correct output:
9.4
---- user output:
10.09.09.0
-- TEST CASE 4:
---- input:
7.5
7.5
---- correct output:
7.5
---- user output:
10.09.07.5
-- TEST CASE 5:
---- input:
7.8
8.4
---- correct output:
8.1
---- user output:
10.09.08.0
-- TEST CASE 6:
---- input:
4.8
5.2
---- correct output:
5.0
---- user output:
10.09.05.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 18:37:49)
-- CODE: 
n1 = float(input(10.0))
n2 = float(input(9.0))

media = int(n1 + n2 )/ 2
print(media)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4.2
5.8
---- correct output:
5.0
---- user output:
10.09.05.0
-- TEST CASE 2:
---- input:
10.0
9.0
---- correct output:
9.5
---- user output:
10.09.09.5
-- TEST CASE 3:
---- input:
10.0
8.8
---- correct output:
9.4
---- user output:
10.09.09.0
-- TEST CASE 4:
---- input:
7.5
7.5
---- correct output:
7.5
---- user output:
10.09.07.5
-- TEST CASE 5:
---- input:
7.8
8.4
---- correct output:
8.1
---- user output:
10.09.08.0
-- TEST CASE 6:
---- input:
4.8
5.2
---- correct output:
5.0
---- user output:
10.09.05.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 18:31:26)
-- CODE: 
n1 = float(int(input(10.0))
n2 = float(int(input(9.0))

media = n1 + n2 / 2
print(media)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4.2
5.8
---- correct output:
5.0
-- ERROR:
File "XXXX", line 1
    n1 = float(int(input(10.0))
               ^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
10.0
9.0
---- correct output:
9.5
-- ERROR:
File "XXXX", line 1
    n1 = float(int(input(10.0))
               ^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 3:
---- input:
10.0
8.8
---- correct output:
9.4
-- ERROR:
File "XXXX", line 1
    n1 = float(int(input(10.0))
               ^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 4:
---- input:
7.5
7.5
---- correct output:
7.5
-- ERROR:
File "XXXX", line 1
    n1 = float(int(input(10.0))
               ^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 5:
---- input:
7.8
8.4
---- correct output:
8.1
-- ERROR:
File "XXXX", line 1
    n1 = float(int(input(10.0))
               ^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 6:
---- input:
4.8
5.2
---- correct output:
5.0
-- ERROR:
File "XXXX", line 1
    n1 = float(int(input(10.0))
               ^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 18:31:25)
-- CODE: 
n1 = float(int(input(10.0))
n2 = float(int(input(9.0))

media = n1 + n2 / 2
print(media)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4.2
5.8
---- correct output:
5.0
-- ERROR:
File "XXXX", line 1
    n1 = float(int(input(10.0))
               ^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
10.0
9.0
---- correct output:
9.5
-- ERROR:
File "XXXX", line 1
    n1 = float(int(input(10.0))
               ^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 3:
---- input:
10.0
8.8
---- correct output:
9.4
-- ERROR:
File "XXXX", line 1
    n1 = float(int(input(10.0))
               ^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 4:
---- input:
7.5
7.5
---- correct output:
7.5
-- ERROR:
File "XXXX", line 1
    n1 = float(int(input(10.0))
               ^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 5:
---- input:
7.8
8.4
---- correct output:
8.1
-- ERROR:
File "XXXX", line 1
    n1 = float(int(input(10.0))
               ^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 6:
---- input:
4.8
5.2
---- correct output:
5.0
-- ERROR:
File "XXXX", line 1
    n1 = float(int(input(10.0))
               ^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 18:37:59)
-- CODE: 
n1 = float(input(10.0))
n2 = float(input(9.0))

media = int(n1 + n2 )/ 2
print(media)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
4.2
5.8
---- correct output:
5.0
---- user output:
10.09.05.0
-- TEST CASE 2:
---- input:
10.0
9.0
---- correct output:
9.5
---- user output:
10.09.09.5
-- TEST CASE 3:
---- input:
10.0
8.8
---- correct output:
9.4
---- user output:
10.09.09.0
-- TEST CASE 4:
---- input:
7.5
7.5
---- correct output:
7.5
---- user output:
10.09.07.5
-- TEST CASE 5:
---- input:
7.8
8.4
---- correct output:
8.1
---- user output:
10.09.08.0
-- TEST CASE 6:
---- input:
4.8
5.2
---- correct output:
5.0
---- user output:
10.09.05.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
